--- a/myapp/package.json
+++ b/myapp/package.json
@@ -7,8 +7,10 @@
     "@material-ui/icons": "^3.0.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-material-ui-form-validator": "^2.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "validator": "^10.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
